# Maestro

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  config.example.yaml  deploy.env.example  deploy.sh  pyproject.toml
.claude/_backup/20260225111045/: settings.json
.claude/agents/: code-engineer.md  code-reviewer.md  doc-consistency-checker.md  documentation-writer.md  integration-validator.md  test-engineer.md
.claude/hooks/: auto-format.sh  check-coverage.sh  generate-report.sh  git-guard.sh  lint-check.sh  protect-files.sh  run-related-tests.sh
.claude/scripts/: common.sh  context.sh  process_ps.awk
.claude/skills/design/: SKILL.md
_legacy/: ARCHITECTURE.md  claude_driver.py  cli.py  config.example.yaml  config.py  meta_agent.py  orchestrator.py  zellij_session.py
docs/: review-codex-tool-runner.md
docs/design/: implementation_plan.md
docs/guides/: deploy-prompt-refactor.md
docs/reports/: deploy-prompt-refactor-report.md
docs/requirement/: 01-产品概述.md  02-功能需求-CLI.md  03-功能需求-核心引擎.md  04-功能需求-Telegram.md  05-review.md  05-配置与部署.md  06-非功能需求.md  07-状态机与协议.md  08-测试需求.md  README.md
prompts/: chat.md  free_chat.md  system.md
src/maestro/: __init__.py  cli.py  config.py  context.py  manager_agent.py  orchestrator.py  registry.py  session.py  state.py  telegram_bot.py  tool_runner.py
tests/: conftest.py  test_circuit_breaker_v2.py  test_codex_runner.py  test_config_prompt_fields.py  test_deploy_script.py  test_focus_mode.py  test_manager_agent_prompt.py  test_prompt_loader.py  test_root_guard.py  test_tool_event.py
(+151 files in other folders)
